--- a/web/index.html
+++ b/web/index.html
@@ -317,13 +317,17 @@
               <div class="uk-accordion-content uk-grid-small" uk-grid>
 
                 <div class="uk-width-1-1@s">
-                  <label class="uk-form-label" for="custom-input">Generated prompt</label>
-                  <button uk-icon="icon: question" type="button"></button>
-                  <div class="uk-card uk-card-small uk-card-body uk-card-default" uk-drop="pos: right-top; mode: click;">
-					This is the generated prompt, used in the last image generation. Use it wisely!
-                  </div>
+                  <label class="uk-form-label" for="final-prompt-positive">Generated prompt: positive</label>
                   <div class="uk-form-controls">
-                    <textarea name="final-prompt" class="uk-textarea" id="final-prompt" rows="3" placeholder="..." aria-label="Textarea" readonly></textarea>
+                    <textarea name="final-prompt-positive" class="uk-textarea" id="final-prompt-positive" rows="3" placeholder="..." aria-label="Textarea" readonly></textarea>
+                  </div>
+                  <label class="uk-form-label" for="final-prompt-negative">Generated prompt: negative</label>
+                  <div class="uk-form-controls">
+					<textarea name="final-prompt-negative" class="uk-textarea" id="final-prompt-negative" rows="3" placeholder="..." aria-label="Textarea" readonly></textarea>
+                  </div>
+                  <label class="uk-form-label" for="final-prompt-conditioning">Generated prompt: conditioning</label>
+                  <div class="uk-form-controls">
+					<textarea name="final-prompt-conditioning" class="uk-textarea" id="final-prompt-conditioning" rows="3" placeholder="" aria-label="Textarea" readonly></textarea>
                   </div>
                 </div>
               </div>
